--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-3.10.12
 beautifulsoup4==4.12.2
 langchain==0.0.288
 lark==1.1.7
@@ -9,6 +10,6 @@ PyPDF2==3.0.1
 python-dotenv==1.0.0
 Requests==2.31.0
 streamlit==1.26.0
-python==3.10.12
+
 
 
