--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ PyPDF2==3.0.1
 python-dotenv==1.0.0
 Requests==2.31.0
 streamlit==1.26.0
-
+google-api-python-client
+openai
+tiktoken
+faiss-cpu
 
 
