--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+aspose_words==23.8.0
 beautifulsoup4==4.12.2
-langchain==0.0.288
+boto3==1.28.57
+botocore==1.31.57
+chromadb==0.4.13
+htbuilder==0.6.2
+langchain==0.0.320
 lark==1.1.7
 openai==0.27.8
 pinecone_client==2.2.2
 pydantic==1.10.12
-pypdf==3.16.0
+pypdf==3.16.4
 PyPDF2==3.0.1
 python-dotenv==1.0.0
+pytz==2023.3
 Requests==2.31.0
+st_pages==0.4.5
 streamlit==1.25.0
-google-api-python-client
-openai
-tiktoken
-faiss-cpu
-selenium==4.12.0 
-streamlit_extras
-st-pages
+streamlit_extras==0.3.4
 unstructured 
+google-api-python-client
+tiktoken
+selenium==4.12.0 
+faiss-cpu
+chromadb
+boto3
+os
+tempfile
